cm (centimeter) unit breaks m (meter) unit in Metric #47661

Closed
opened 2016-03-02 16:31:45 +01:00 by Gerald Schlüter · 7 comments

2.77 and downwards

1cm + 1m --> 1.60935km
1m + 1cm --> 1.01m

Switch to Metric System in the Scene Tab.
Click on Standard Cube Location X

Any Unit less than 1m seems to break it
1mm + 1cm -> 1.1cm
1mm + 1m -> 1.60934km
1m + 1mm -> 1.001m

2.77 and downwards 1cm + 1m --> 1.60935km 1m + 1cm --> 1.01m Switch to Metric System in the Scene Tab. Click on Standard Cube Location X Any Unit less than 1m seems to break it 1mm + 1cm -> 1.1cm 1mm + 1m -> 1.60934km 1m + 1mm -> 1.001m

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @GeraldSchluter

Added subscriber: @GeraldSchluter

Added subscriber: @mont29

Added subscriber: @mont29

What happens here is that the m in second position is detected as mile, not meter (m is also alternate for for mile)… Not sure why, investigating.

What happens here is that the `m` in second position is detected as mile, not meter (`m` is also alternate for for mile)… Not sure why, investigating.
Bastien Montagne self-assigned this 2016-03-02 17:28:14 +01:00

This issue was referenced by 9c0de0084b

This issue was referenced by 9c0de0084bfed50a78798c1f0df51fef0ce9e2bd

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Thank you, for your quick reaction.

Gerald

Thank you, for your quick reaction. Gerald
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47661
No description provided.